--- a/DvachBrowser3/Views/MainPage.xaml
+++ b/DvachBrowser3/Views/MainPage.xaml
@@ -18,16 +18,16 @@
         <CollectionViewSource x:Name="MainSource" IsSourceGrouped="True"></CollectionViewSource>
         <views:MainTileTemplateSelector x:Key="MainTileTemplateSelector">
             <views:MainTileTemplateSelector.BoardTemplate>
-                <DataTemplate>
-                    <partial:BoardTile ViewModel="{Binding Path=TileData, Mode=OneWay}" Tapped="Tile_OnTapped" Tag="{Binding Mode=OneWay}" Margin="4">
+                <DataTemplate x:DataType="viewModels:IMainTileViewModel">
+                    <partial:BoardTile ViewModel="{x:Bind Path=TileData, Mode=OneWay}" Tapped="Tile_OnTapped" Tag="{x:Bind Mode=OneWay}" Margin="4">
                         <Interactivity:Interaction.Behaviors>
                             <behaviors1:PopupMenuBehavior>
                                 <behaviors1:PopupMenuBehavior.MenuFlyout>
                                     <MenuFlyout>
-                                        <MenuFlyoutItem Text="Удалить" Visibility="{Binding CanDelete, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{Binding Mode=OneWay}" Click="DeleteItem_OnClick" />
-                                        <MenuFlyoutItem Text="В избранное" Visibility="{Binding CanAddToFavorites, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{Binding Mode=OneWay}" Click="AddToFavoritesItem_OnClick" />
-                                        <MenuFlyoutItem Text="Из избранного" Visibility="{Binding CanRemoveFromFavorites, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{Binding Mode=OneWay}" Click="RemoveFromFavoritesItem_OnClick" />
-                                        <MenuFlyoutItem Text="Копировать ссылку" Visibility="{Binding CanCopyLink, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{Binding Mode=OneWay}"  Click="CopyLinkItem_OnClick" />
+                                        <MenuFlyoutItem Text="Удалить" Visibility="{x:Bind CanDelete, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{x:Bind Mode=OneWay}" Click="DeleteItem_OnClick" />
+                                        <MenuFlyoutItem Text="В избранное" Visibility="{x:Bind CanAddToFavorites, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{x:Bind Mode=OneWay}" Click="AddToFavoritesItem_OnClick" />
+                                        <MenuFlyoutItem Text="Из избранного" Visibility="{x:Bind CanRemoveFromFavorites, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{x:Bind Mode=OneWay}" Click="RemoveFromFavoritesItem_OnClick" />
+                                        <MenuFlyoutItem Text="Копировать ссылку" Visibility="{x:Bind CanCopyLink, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{x:Bind Mode=OneWay}"  Click="CopyLinkItem_OnClick" />
                                     </MenuFlyout>
                                 </behaviors1:PopupMenuBehavior.MenuFlyout>
                             </behaviors1:PopupMenuBehavior>
@@ -36,16 +36,16 @@
                 </DataTemplate>
             </views:MainTileTemplateSelector.BoardTemplate>
             <views:MainTileTemplateSelector.ThreadTemplate>
-                <DataTemplate>
-                    <partial:ThreadTile ViewModel="{Binding Path=TileData, Mode=OneWay}" Tapped="Tile_OnTapped" Tag="{Binding Mode=OneWay}" Margin="4">
+                <DataTemplate x:DataType="viewModels:IMainTileViewModel">
+                    <partial:ThreadTile ViewModel="{x:Bind Path=TileData, Mode=OneWay}" Tapped="Tile_OnTapped" Tag="{x:Bind Mode=OneWay}" Margin="4">
                         <Interactivity:Interaction.Behaviors>
                             <behaviors1:PopupMenuBehavior>
                                 <behaviors1:PopupMenuBehavior.MenuFlyout>
                                     <MenuFlyout>
-                                        <MenuFlyoutItem Text="Удалить" Visibility="{Binding CanDelete, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{Binding Mode=OneWay}" Click="DeleteItem_OnClick" />
-                                        <MenuFlyoutItem Text="В избранное" Visibility="{Binding CanAddToFavorites, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{Binding Mode=OneWay}" Click="AddToFavoritesItem_OnClick" />
-                                        <MenuFlyoutItem Text="Из избранного" Visibility="{Binding CanRemoveFromFavorites, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{Binding Mode=OneWay}" Click="RemoveFromFavoritesItem_OnClick" />
-                                        <MenuFlyoutItem Text="Копировать ссылку" Visibility="{Binding CanCopyLink, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{Binding Mode=OneWay}"  Click="CopyLinkItem_OnClick" />
+                                        <MenuFlyoutItem Text="Удалить" Visibility="{x:Bind CanDelete, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{x:Bind Mode=OneWay}" Click="DeleteItem_OnClick" />
+                                        <MenuFlyoutItem Text="В избранное" Visibility="{x:Bind CanAddToFavorites, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{x:Bind Mode=OneWay}" Click="AddToFavoritesItem_OnClick" />
+                                        <MenuFlyoutItem Text="Из избранного" Visibility="{x:Bind CanRemoveFromFavorites, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{x:Bind Mode=OneWay}" Click="RemoveFromFavoritesItem_OnClick" />
+                                        <MenuFlyoutItem Text="Копировать ссылку" Visibility="{x:Bind CanCopyLink, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Tag="{x:Bind Mode=OneWay}"  Click="CopyLinkItem_OnClick" />
                                     </MenuFlyout>
                                 </behaviors1:PopupMenuBehavior.MenuFlyout>
                             </behaviors1:PopupMenuBehavior>
@@ -73,7 +73,7 @@
         </Grid.RowDefinitions>
 
         <!--  header  -->
-        <controls:PageHeader BackButtonVisibility="Collapsed" Frame="{Binding Frame, Mode=OneTime}"
+        <controls:PageHeader BackButtonVisibility="Collapsed" Frame="{x:Bind Frame, Mode=OneTime}"
                              Content="ГЛАВНАЯ" FontWeight="Bold">
             <Interactivity:Interaction.Behaviors>
                 <behaviors:EllipsisBehavior Visibility="Collapsed" />
@@ -88,7 +88,7 @@
                         <GridView.GroupStyle>
                             <GroupStyle>
                                 <GroupStyle.HeaderTemplate>
-                                    <DataTemplate>
+                                    <DataTemplate x:DataType="viewModels:IMainGroupViewModel">
                                         <TextBlock FontSize="{Binding Path=StyleManager.Text.ListHeaderFontSize, Mode=OneWay}" FontWeight="SemiBold" Text="{Binding Path=Name, Mode=OneWay}" />
                                     </DataTemplate>
                                 </GroupStyle.HeaderTemplate>
@@ -99,7 +99,7 @@
                 <SemanticZoom.ZoomedOutView>
                     <ListView x:Name="ZoomOutView" ItemsSource="{Binding Source={StaticResource MainSource}, Path=CollectionGroups}">
                         <ListView.ItemTemplate>
-                            <DataTemplate>
+                            <DataTemplate x:DataType="viewModels:IMainGroupViewModel">
                                 <TextBlock Margin="10" FontSize="{Binding Path=StyleManager.Text.ListHeaderFontSize, Mode=OneWay}" FontWeight="SemiBold" Text="{Binding Path=Name, Mode=OneWay}" />
                             </DataTemplate>
                         </ListView.ItemTemplate>
