--- a/DvachBrowser3/Views/Partial/MarkupControl.xaml
+++ b/DvachBrowser3/Views/Partial/MarkupControl.xaml
@@ -9,7 +9,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <StackPanel Orientation="{Binding Orientation, Mode=OneWay}" x:Name="BindingRoot">
+    <StackPanel Orientation="{x:Bind Orientation, Mode=OneWay}" x:Name="BindingRoot">
         <Button x:Name="BoldButton" Margin="2" Padding="2" ToolTipService.ToolTip="Жирный" Click="BoldButton_OnClick">
             <Viewbox Height="16" Width="16">
                 <SymbolIcon Symbol="Bold" />
